--- a/index.html
+++ b/index.html
@@ -56,21 +56,103 @@
 
 	</header>
     <main>
-	 <header><h3>A JavaScript project by YOUR NAME HERE</h3></header>
-	 <p>This page was taken from an HTML5 Flexible template that could be a good starting point for some of your projects.  The template file starts by setting a background color on the HTML element, and setting max-width on the body, which is styled like a wrapper.  The BODY element is also set to a percentage width so it leaves a bit of HTML color until it shrinks in size toward the mobile view.</p>
-	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
-	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
+	 <header>
+		<h3>A JavaScript project by Jesus Antonio GP</h3>
+		<h3 id="greeting">Greeting goes here</h3>
+	</header>
+		
+	 <p>This is a JavaScript page which uses the JS Date Object Model is meant to create a dynamic 
+		page depening on the time of day that the webpage is accessed.
+	 </p>
+	 <p>The requirements of this page are as follows: display a unique image, color, and message for the following times of day:
+		 <ul>
+			<li>Morning 5 am - 12 pm </li>
+			<li>Afternoon 12 pm - 6 pm</li>
+			<li>Evening 6 pm - 11 pm</li>
+			<li>Night 11 pm - 5 am</li>
+		 </ul>
+	</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible" />
+	  <img id="pic" src="images/morning.jpg"Time of Day Image" class="flexible" />
      <footer>
-      <p><small>&copy; 2022 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+      <p><small>&copy; 2021 - <span id="copyright"></span> 2022 by 
+          Jesus Antonio GP, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
   </main>
  <script>
+
+
+//We are taking the directions/deliverables of the project and placing them under this comment 
+//Morning (5am to 12 noon)
+//Afternoon (12 noon to 6pm)
+//Evening (6pm to 11pm)
+//Night (11pm to 5am)
+
+
+
+	let myDate = new Date();
+	//the next line will meet the dynamic copyright requirement
+	let myCopyright = myDate.getFullYear();
+	let myHour = myDate.getHours();
+	let myGreeting = "";
+	let myColor = "";
+	let myPic = "";
+
+
+myDate = new Date(); 
+myHour = myDate.getHours();
+
+//  myHour = 6;
+//create the good morning 5-12 portion 
+if (myHour < 12) {
+
+	// alert("good morning!");
+	myGreeting = "Good morning";
+	myColor = "yellow";
+	myPic = ""
+}else{
+
+	// alert("good afternoon!");
+	myGreeting = "Good Afternoon";
+	myColor = "orange";
+	myPic = 'afternoon.jpg';
+} 
+
+
+
+if (myHour > 18) {
+
+// alert("good evening!");
+myGreeting = "Good evening";
+myColor = "red";
+myPic = 'evening.jpg'
+}else{
+
+// alert("good night!");
+myGreeting = "Good Night";
+myColor = "orange";
+myPic = 'night.jpg';
+} 
+
+
+
+
+	//add images to myPic
+
+	myPic = "images/" + myPic; 
+
+
+	//alert(myCopyright);
+	// console.log(myCopyright);
+	document.getElementById("copyright").innerHTML = myCopyright;
+	document.getElementById("greeting").innerHTML = myGreeting;
+	document.querySelector("html").style.backgroundColor = myColor;
+	document.getElementById("pic").scr = myPic;
+
+
     //https://tinyurl.com/dynamic-html-checker
     document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
       
