--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
 myDate = new Date(); 
 myHour = myDate.getHours();
+console.log(myDate);
+alert(myDate);
 
 //  myHour = 6;
 //create the good morning 5-12 portion 
