--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ myHour = myDate.getHours();
 console.log(myDate);
 alert(myDate);
 
- myHour = 24;
+//  myHour = 24;
 //create the good morning 5-12 portion 
 if (myHour > 5 && myHour < 12) {
 
