--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ myPic = 'night.jpg';
 	document.getElementById("copyright").innerHTML = myCopyright;
 	document.getElementById("greeting").innerHTML = myGreeting;
 	document.querySelector("html").style.backgroundColor = myColor;
-	document.getElementById("pic").scr = myPic;
+	document.getElementById("pic").src = myPic;
 
 
     //https://tinyurl.com/dynamic-html-checker
